# Rosetta_Tools

./: .gitignore  README.md  RELEASE.md  pyproject.toml
datasets/consensus_pairs/: agency_consensus_pairs.jsonl  authorization_consensus_pairs.jsonl  credibility.jsonl  credibility_consensus_pairs.jsonl  deception_consensus_pairs.jsonl  exfiltration_consensus_pairs.jsonl  formality_consensus_pairs.jsonl  negation_consensus_pairs.jsonl  obfuscation_consensus_pairs.jsonl  sarcasm_consensus_pairs.jsonl  sentiment_consensus_pairs.jsonl  specificity_consensus_pairs.jsonl  temporal_order_consensus_pairs.jsonl  threat_severity_consensus_pairs.jsonl  urgency_consensus_pairs.jsonl
docs/: api.md
examples/: CAZ_Companion_Tutorial.ipynb  CAZ_Companion_Tutorial_GPT2_XL.ipynb
rosetta_tools/: __init__.py  ablation.py  alignment.py  caz.py  caz_registry.py  compound_monitor.py  consensus_generator.py  dark_feature_scanner.py  dataset.py  extraction.py  feature_atlas.py  feature_tracker.py  gem.py  gpu_utils.py  manifold_detector.py  models.py  paths.py  probes.py  reporting.py  tracking.py  viz.py
rosetta_tools/data/: concepts.yaml  models.yaml
tests/: test_ablation.py  test_alignment.py  test_caz.py  test_dataset.py  test_extraction.py  test_feature_tracker.py  test_gpu_utils.py  test_models.py  test_pathological.py  test_probes.py  test_reporting.py
