[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosetta_tools"
version = "0.1.0"
description = "Shared tooling for the Rosetta interpretability research program"
authors = [{name = "James Henry", email = "jamesrahenry@henrynet.ca"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20",
    "huggingface_hub>=0.20",
    "mlflow>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/jamesrahenry/Rosetta_Tools"

[tool.setuptools.packages.find]
where = ["."]
include = ["rosetta_tools*"]
